--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Практические задания</h1> 
   <ol>
         <li>
-          <a href="task1/task.html">Практическое задание №1</a></li>
+          <a href="task.html">Практическое задание №1</a></li>
 
         <li>
           <a href="">Практическое задание №2</a></li>
@@ -25,4 +25,5 @@
   </ol>
       
 </body>
+
 </html>
