--- a/task.html
+++ b/task.html
@@ -7,7 +7,7 @@
     <title>Практическое задание №1</title>
 </head>
 <body>
-     <a href="../index.html">На главную</a>
+     <a href="index.html">На главную</a>
      <h1>Практическое задание №1</h1>
      <hr>
      <h2>Анкета о себе</h2>
@@ -36,4 +36,5 @@
     <img src="telegram.png" alt=">Ссылка на телеграмм" width="64">
 </a>        
 </body>
+
 </html>
